undone some changes accidently introduced by my SHK
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18781 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c