@@ -185,17 +185,17 @@ public class CustomInstructionTest {
     List<String> outputVars = new ArrayList<>();
     outputVars.add("var0");
     ci = new CustomInstruction(null, null, inputVars, outputVars, ShutdownNotifier.create());
-    Truth.assertThat(ci.getSignature()).isEqualTo("(var) -> (var0@1)"); //TODO
+    Truth.assertThat(ci.getSignature()).isEqualTo("(var) -> (var0@1)");
 
     inputVars = new ArrayList<>();
-    inputVars.add("var1");
+    inputVars.add("f::var1");
     inputVars.add("var2");
     outputVars = new ArrayList<>();
     outputVars.add("var3");
-    outputVars.add("var4");
+    outputVars.add("f::var4");
     outputVars.add("var5");
     ci = new CustomInstruction(null, null, inputVars, outputVars, ShutdownNotifier.create());
-    Truth.assertThat(ci.getSignature()).isEqualTo("(var1, var2) -> (var3@1, var4@1, var5@1)"); // TODO
+    Truth.assertThat(ci.getSignature()).isEqualTo("(|f::var1|, var2) -> (var3@1, |f::var4@1|, var5@1)");
   }
 
   @Test
@@ -210,7 +210,7 @@ public class CustomInstructionTest {
     ci = new CustomInstruction(null, null, inputVars, Collections.<String> emptyList(), ShutdownNotifier.create());
     pair = ci.getFakeSMTDescription();
     Truth.assertThat(pair.getFirst()).hasSize(1);
-    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun var () Int)"); // TODO
+    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun var () Int)");
     Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool(= var 0))");
 
     List<String> outputVars = new ArrayList<>();
@@ -218,7 +218,7 @@ public class CustomInstructionTest {
     ci = new CustomInstruction(null, null, Collections.<String> emptyList(), outputVars, ShutdownNotifier.create());
     pair = ci.getFakeSMTDescription();
     Truth.assertThat(pair.getFirst()).hasSize(1);
-    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun var1@1 () Int)"); // TODO
+    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun var1@1 () Int)");
     Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool (= var1@1 0))");
 
     inputVars = new ArrayList<>();
@@ -228,26 +228,26 @@ public class CustomInstructionTest {
     ci = new CustomInstruction(null, null, inputVars, outputVars, ShutdownNotifier.create());
     pair = ci.getFakeSMTDescription();
     Truth.assertThat(pair.getFirst()).hasSize(2);
-    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun var1 () Int)"); // TODO
+    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun var1 () Int)");
     Truth.assertThat(pair.getFirst().get(1)).isEqualTo("(declare-fun var2@1 () Int)");
     Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool(and (= var1 0) (= var2@1 0)))");
 
     inputVars = new ArrayList<>();
     inputVars.add("var");
-    inputVars.add("var1");
+    inputVars.add("f::var1");
     inputVars.add("var2");
     outputVars = new ArrayList<>();
     outputVars.add("var3");
-    outputVars.add("var4");
+    outputVars.add("f::var4");
     ci = new CustomInstruction(null, null, inputVars, outputVars, ShutdownNotifier.create());
     pair = ci.getFakeSMTDescription();
     Truth.assertThat(pair.getFirst()).hasSize(5);
-    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun var () Int)"); // TODO
-    Truth.assertThat(pair.getFirst().get(1)).isEqualTo("(declare-fun var1 () Int)");
+    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun var () Int)");
+    Truth.assertThat(pair.getFirst().get(1)).isEqualTo("(declare-fun |f::var1| () Int)");
     Truth.assertThat(pair.getFirst().get(2)).isEqualTo("(declare-fun var2 () Int)");
     Truth.assertThat(pair.getFirst().get(3)).isEqualTo("(declare-fun var3@1 () Int)");
-    Truth.assertThat(pair.getFirst().get(4)).isEqualTo("(declare-fun var4@1 () Int)");
-    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool(and (= var 0)(and (= var1 0)(and (= var2 0)(and (= var3@1 0) (= var4@1 0))))))");
+    Truth.assertThat(pair.getFirst().get(4)).isEqualTo("(declare-fun |f::var4@1> () Int)");
+    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool(and (= var 0)(and (= |f::var1| 0)(and (= var2 0)(and (= var3@1 0) (= |f::var4@1| 0))))))");
   }
 
   @Test
